--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,13 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# Manual
+local.properties
+.gradle
+.nb-gradle/
+**/*.dylib
+/Hexgrid-API/build/
+/Hexgrid-Editor/build/
+*.log
+*.so
